# cminus

./: Cargo.toml  README.md  tests.sh
lexical/: Cargo.toml  run.sh
lexical/src/: grammar.pest  lib.rs  main.rs
lexical/tests/declarations/incorrect/: typeless_param.c
lexical/tests/declarations/incorrect/builtins/: else_func.c  if_func.c  tempvar.c  while_func.c
lexical/tests/declarations/incorrect/function_nested/: function_nested.c
lexical/tests/lex/correct/: dangling_else.c  declare_and_assign.c
lexical/tests/lex/incorrect/: array_unclosed.c  funccallcall.c  parameter_semicolon.c  unopened_scope.c
lexical/tests/scope/incorrect/: func_unclosed_scope.c  func_unopened_scope.c
lexical/tests/syntax/incorrect/: comment_nested.c  comment_unclosed.c
lexical/tests/types/basic/incorrect/: repeat_unsigned.c
machine_code/: Cargo.toml  asm.sh  da.sh  run.sh  test  test.S  test.asm  test.c  test.s  test_asm.S  test_cminus.S  test_norm.S
machine_code/src/: allocator.rs  assembly.rs  code_generator.rs  emitter.rs  global_alloc.rs  lib.rs  main.rs  output.rs  reg_alloc.rs  register.rs
syntax/: Cargo.toml  run.sh  test.c
syntax/src/: builder.rs  error.rs  id.rs  lib.rs  main.rs  node.rs  scope.rs  symbol.rs  symbol_table.rs  syntax_tree.rs  test.rs  tree_walker.rs  visitor.rs
syntax/tests/: meson.build
syntax/tests/cpp/: main.cpp
syntax/tests/cpp/support/: fixture.h  globals.h  testutil.h  testutil_internal.h
syntax/tests/cpp/units/: declarations.cpp
syntax/tests/cpp/units/node/: node.cpp  node_coercion.cpp  node_operator.cpp
syntax/tests/declarations/correct/: uninitialized_var.c  unused_function.c  unused_var.c
syntax/tests/declarations/incorrect/: call_param.c  call_var.c  early_reference_func.c  early_reference_var.c  redeclare_func.c  redeclare_var.c  undeclared_func.c
syntax/tests/node/correct/: array.c  assignment.c  coercion.c  funccall.c  if_targets.c  while.c
syntax/tests/node/correct/coercion/: if_coercion.c  while_coercion.c
syntax/tests/node/incorrect/: global_call.c
syntax/tests/return/incorrect/: returntype.c
syntax/tests/scope/incorrect/: late_reference.c
syntax/tests/types/coercion/incorrect/: int.c  int8.c  param.c
tests/: Cargo.toml
tests/src/: intermediate_code_test.rs  lexical_test.rs  lib.rs  main.rs  syntax_test.rs
tests/testfiles/general/programs/: scope_turtle.c
tests/testfiles/general/programs/fibonacci/: fibonacci.c
tests/testfiles/general/programs/gcd/: gcd.io
tests/testfiles/lexical/declarations/incorrect/: nameless_func.c  nameless_param.c  nameless_var.c  typeless_func.c
tests/testfiles/programs/fibonacci/: fibonacci.io
tests/testfiles/programs/gcd/: gcd.c
tests/testfiles/programs/sort/merge/: merge.c
(+183 files in other folders)
