[package]
name = "lexical"
version = "0.1.0"
authors = ["Sjors Holtrop <sjors@sholtrop.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
general = { path = "../general" }
pest = "2.1.3"
pest_derive = "2.1.0"
log = "0.4.14"