[package]
name = "machine-code"
version = "0.1.0"
authors = ["Sjors Holtrop <sjors@sholtrop.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
general = { path = "../general" }
syntax = { path = "../syntax" }
lexical = { path = "../lexical" }
intermediate_code = { path = "../intermediate_code" }
clap = "2.33.3"
log = "0.4.14"