[package]
name = "syntax"
version = "0.1.0"
authors = ["Sjors Holtrop <sjors@sholtrop.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lexical = { path = "../lexical" }
general = { path = "../general" }
ptree = "0.4.0"
log = "0.4.14"
itertools = "0.10.1"
clap = "2.33.3"
lazy_static = "1.4.0"
regex = "1.5.4"