[package]
name = "tests"
version = "0.1.0"
authors = ["Sjors Holtrop <sjors@sholtrop.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
general = { path = "../general" }
lexical = { path = "../lexical" } 
syntax  = { path = "../syntax" }
intermediate_code = { path = "../intermediate_code" }
log = "0.4.14"
clap = "2.33.3"
ptree = "0.4.0"
itertools = "0.10.1"